created a page title component and styled it and imported a few fonts

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
 @import './headerNavbar.scss';
 @import './auth/signIn.scss';
 @import './auth/signUp.scss';
+@import './page-title.scss';
 
 html {
     font-size: 62.5%;
