--- a/src/style/auth/signIn.scss
+++ b/src/style/auth/signIn.scss
@@ -9,10 +9,15 @@
     .sign-in_form {
         display: grid;
         grid-template-rows: [email-s] 64px [email-e password-s] 64px [password-e] minmax(20px, 289px) [line-s] 2px [line-e login-s] 38px [login-e];
+        grid-template-columns: 1fr;
     }
 }
 
 .sign-in-form {
+
+    & > * {
+        grid-column: 1/-1;
+    }
 
     .sign-in-form-email {
         grid-row: email-s/email-e;
@@ -31,5 +36,11 @@
     .sign-in-form-login {
         margin-top: 39px;
         grid-row: login-s/login-e;
+    }
+
+    .sign-in-form-details {
+        grid-row: 1/-1;
+        justify-self: end;
+        align-self: start;
     }
 }
