--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,7 @@
 @import './auth/signUp.scss';
 @import './page-title.scss';
 @import './form-fields.scss';
+@import './details.scss';
 
 html {
     font-size: 62.5%;
