developed sign up form and modified formbutton to have short gray case

--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -35,4 +35,9 @@
             outline: none;
         }
     }
+
+    .form-button-gray-button {
+        background-color: #999;
+        width: 137px;
+    }
 }
