--- a/src/style/auth/signUp.scss
+++ b/src/style/auth/signUp.scss
@@ -1,4 +1,46 @@
 .sign-up {
     grid-row: content-s/content-e;
     grid-column: s/e;
+
+    .sign-up-page-title {
+
+    }
+
+    .sign-up_form {
+        display: grid;
+        grid-template-rows: [email-s] 64px [email-e password-s] 64px [password-e] minmax(20px, 289px) [line-s] 2px [line-e login-s] 38px [login-e];
+        grid-template-columns: 1fr;
+    }
+}
+
+.sign-up-form {
+
+    & > * {
+        grid-column: 1/-1;
+    }
+
+    .sign-up-form-email {
+        grid-row: email-s/email-e;
+    }
+
+    .sign-up-form-password {
+        margin-top: 15px;
+        grid-row: password-s/password-e;
+    }
+
+    .sign-up-form-line {
+        grid-row: line-s/line-e;
+        border-top: 1px solid #ccc;
+    }
+
+    .sign-up-form-login {
+        margin-top: 39px;
+        grid-row: login-s/login-e;
+    }
+
+    .sign-up-form-details {
+        grid-row: 1/-1;
+        justify-self: end;
+        align-self: start;
+    }
 }
