finished signup form and grid

--- a/src/style/details.scss
+++ b/src/style/details.scss
@@ -18,4 +18,8 @@
             text-decoration-line: underline;
         }
     }
+
+    .details-item {
+        text-decoration-line: none;;
+    }
 }
