--- a/src/style/auth/signUp.scss
+++ b/src/style/auth/signUp.scss
@@ -8,8 +8,9 @@
 
     .sign-up_form {
         display: grid;
-        grid-template-rows: [email-s] 64px [email-e password-s] 64px [password-e] minmax(20px, 289px) [line-s] 2px [line-e login-s] 38px [login-e];
-        grid-template-columns: 1fr;
+        grid-template-rows: [name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+        grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e create-s] 1fr [create-e] 1fr;
+        grid-row-gap: 15px;
     }
 }
 
@@ -19,23 +20,36 @@
         grid-column: 1/-1;
     }
 
+    .sign-up-form-name {
+        grid-row: name-s/name-e;
+    }
+
     .sign-up-form-email {
         grid-row: email-s/email-e;
     }
 
     .sign-up-form-password {
-        margin-top: 15px;
         grid-row: password-s/password-e;
+    }
+
+    .sign-up-form-confirm {
+        grid-row: confirm-s/confirm-e;
     }
 
     .sign-up-form-line {
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
+        margin-bottom: 24px;
     }
 
     .sign-up-form-login {
-        margin-top: 39px;
-        grid-row: login-s/login-e;
+        grid-row: buttons-s/buttons-e;
+        grid-column: create-s/create-e;
+    }
+
+    .sign-up-form-back {
+        grid-row: buttons-s/buttons-e;
+        grid-column: back-s/back-e;
     }
 
     .sign-up-form-details {
