setup purchase history component

--- a/src/style/auth/signIn.scss
+++ b/src/style/auth/signIn.scss
@@ -2,9 +2,9 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    .sign-in-page-title {
+    // .sign-in-page-title {
 
-    }
+    // }
 
     .sign-in_form {
         display: grid;
