setup purchase history child components and corresponding styles

--- a/src/style/account/purchaseHistory.scss
+++ b/src/style/account/purchaseHistory.scss
@@ -1,5 +1,18 @@
-// .purchase-history {
-//     .purchase-history-page-title {
+.purchase-history {
 
-//     }
-// }
+    .purchase-history-page-title {
+        border-bottom: 1px solid #ccc;
+    }
+
+    .purchase-history-bottom-border {
+        border-bottom: 1px solid #f2f2f2;
+    }
+}
+
+.purchases {
+
+}
+
+.purchase-detail {
+
+}
