--- a/src/style/account/purchaseHistory.scss
+++ b/src/style/account/purchaseHistory.scss
@@ -1,5 +1,11 @@
 .purchase-history {
 
+    .purchase-history-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 37px 0;
+    }
+    
     .purchase-history-page-title {
         border-bottom: 1px solid #ccc;
     }
@@ -10,7 +16,10 @@
 }
 
 .purchases {
-
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, 80px);
+    width: 360px;
 }
 
 .purchase-detail {
