--- a/src/style/account/accountInformation.scss
+++ b/src/style/account/accountInformation.scss
@@ -8,7 +8,7 @@
 
     .account-information_form {
         display: grid;
-        grid-template-rows: [name-s street-address-s] 64px [name-e street-address-e email-s city-s] 64px [email-e city-e state-s zipcode-s] 64px [zipcode-e state-e];
+        grid-template-rows: [name-s street-address-s] 64px [name-e street-address-e email-s city-s] 64px [email-e city-e state-s zipcode-s] 64px [zipcode-e state-e change-password-s current-s] 64px [changepassword-e current-e new-s] 64px  [new-e confirm-s] 64px [confirm-e];
         grid-template-columns: [s] 1fr [m] 1fr [e];
         grid-row-gap: 15px;
     }
@@ -53,7 +53,23 @@
         }
     }
 
-    .account-information-form-change-password {
-        transform: translateY(38px);
+    .account-information-form-change-password,
+    .account-information-form-current {
+        grid-column: s/m;
+        grid-row: change-password-s/change-password-e;
+        transform: translateY(-38px);
+    }
+
+    .account-information-form-new {
+        grid-row: new-s/new-e;
+    }
+
+    .account-information-form-confirm {
+        grid-row: confirm-s/confirm-e;
+    }
+
+    .account-information-form-new,
+    .account-information-form-confirm {
+        transform: translateY(-25px);
     }
 }
