developed shopReducer and fetch shop categories, action creator

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,7 @@
 @import './account/purchaseHistory.scss';
 @import './account/accountInformation.scss';
 @import './account/account.scss';
+@import './shop/shop.scss';
 
 html {
     font-size: 62.5%;
