search bar styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,7 @@
 @import './account/accountInformation.scss';
 @import './account/account.scss';
 @import './shop/shop.scss';
+@import './shop/shopSearchBar.scss';
 
 html {
     font-size: 62.5%;
