styled children components in shop product

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@
 @import './shop/shopSearchBar.scss';
 @import './quantity.scss';
 @import './greenPriceTag.scss';
+@import './shop/shopProduct.scss';
 
 html {
     font-size: 62.5%;
