--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -60,7 +60,21 @@
 }
 
 .cart-footer {
+
+    height: 113px;
+    background-color: #1A1A1A;
+    
+    display: grid;
+    grid-template-rows: [s] 1fr [e];
+    grid-template-columns: 50px [checkout-s] 1fr [checkout-e sub-s] 1fr [sub-e] 27px [price-s] 46px [price-e] 31px;
+    align-items: center;
+
+    & > * {
+        grid-row: s/e;
+    }
+    
     .cart-footer__checkout {
+        grid-column: checkout-s/checkout-e;
         display: grid;
         justify-items: center;
         align-items: center;
@@ -85,5 +99,19 @@
         &:focus {
             outline: none;
         }
+    }
+
+    .cart-footer__subtotal {
+        font-size: 19px;
+        grid-column: sub-s/sub-e;
+        justify-self: end;
+    }
+
+    .cart-footer__price {
+        font-size: 18px;
+        color: white;
+        font-weight: 600;
+        grid-column: price-s/price-e;
+        justify-self: start;
     }
 }
