created shop cart grid

--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -43,7 +43,13 @@
 }
 
 .cart-content {
+    display: grid;
+    grid-template-rows: 25px [title-s] 80px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
+    grid-template-columns: [footer-s] 30px [s] 1fr [e] 30px [footer-e];
+    
     .cart-content__title {
+        grid-row: title-s/title-e;
+        grid-column: s/e;
         font-weight: 600;
         font-size: 30px;
         font-family: 'Titillium Web';
@@ -52,10 +58,14 @@
 
     .cart-content__products {
         display: grid;
+        grid-row: products-s/products-e;
+        grid-column: s/e;
     }
 
     .cart-content__footer {
         display: grid;
+        grid-row: footer-s/footer-e;
+        grid-column: footer-s/footer-e;
     }
 }
 
