--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -44,7 +44,7 @@
 
 .cart-content {
     display: grid;
-    grid-template-rows: 25px [title-s] 80px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
+    grid-template-rows: 25px [title-s] 40px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
     grid-template-columns: [footer-s] 30px [s] 1fr [e] 30px [footer-e];
     
     .cart-content__title {
@@ -60,6 +60,8 @@
         display: grid;
         grid-row: products-s/products-e;
         grid-column: s/e;
+        padding-top: 50px;
+        overflow-y: scroll;
     }
 
     .cart-content__footer {
