cart product grid + alignment

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,8 @@
 @import './quantity.scss';
 @import './greenPriceTag.scss';
 @import './shop/shopProduct.scss';
+@import './shop/cartProduct.scss';
+@import './shop/shopCart.scss';
 
 html {
     font-size: 62.5%;
