--- a/src/style/shop/shopCart.scss
+++ b/src/style/shop/shopCart.scss
@@ -62,6 +62,7 @@
         grid-column: s/e;
         padding-top: 50px;
         overflow-y: scroll;
+        grid-row-gap: 45px;
     }
 
     .cart-content__footer {
