finished styling cart

--- a/src/style/shop/cartProduct.scss
+++ b/src/style/shop/cartProduct.scss
@@ -14,6 +14,9 @@
         align-self: start;
         grid-row: s/m;
         grid-column: title-s/title-e;
+        font-size: 18px;
+        font-family: 'Encode Sans Condensed';
+        color: #e6e6e6;
     }
 
     .cart-product__quantity {
@@ -29,6 +32,8 @@
         grid-row: m/e;
         grid-column: remove-s/remove-e;
         justify-self: start;
+        font-size: 14px;
+        text-decoration-line: underline;
     }
 
     .cart-product__price {
