--- a/src/style/shop/shop.scss
+++ b/src/style/shop/shop.scss
@@ -2,10 +2,9 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
     display: grid;
-    grid-template-rows: 15px [search-bar-s] 38px [search-bar-e products-s] 1fr [products-e];
+    grid-template-rows: 15px [search-bar-s] 38px [search-bar-e] 57px [products-s] 1fr [products-e];
     grid-template-columns: [s] minmax(100px, 1035px) [e];
     justify-content: center;
-    grid-gap: 57px;
 
     .shop_search-bar {
         grid-row: search-bar-s/search-bar-e;
@@ -21,5 +20,20 @@
         grid-row-gap: 40px;
         width: 100%;
         justify-self: center;
+    }
+
+    .shop__cart-button {
+        z-index: 5;
+    }
+
+    .shop__cart,
+    .shop__cart-button {
+        // grid-row: 1/-1;
+        // grid-column: 1/-1;
+        // align-self: start;
+        // justify-self: end;
+        position: absolute;
+        top: 115px;
+        right: 0px;
     }
 }
