setup order review component and added page title component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,6 +15,7 @@
 @import './shop/shopProduct.scss';
 @import './shop/cartProduct.scss';
 @import './shop/shopCart.scss';
+@import './order/review.scss';
 
 html {
     font-size: 62.5%;
