review form grid

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,6 +16,7 @@
 @import './shop/cartProduct.scss';
 @import './shop/shopCart.scss';
 @import './order/review.scss';
+@import './order/reviewForm.scss';
 
 html {
     font-size: 62.5%;
