order review product grid

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,6 +17,7 @@
 @import './shop/shopCart.scss';
 @import './order/review.scss';
 @import './order/reviewForm.scss';
+@import './order/reviewProduct.scss';
 
 html {
     font-size: 62.5%;
