--- a/src/style/order/reviewForm.scss
+++ b/src/style/order/reviewForm.scss
@@ -4,6 +4,10 @@
         grid-column: 1/-1;
         grid-row: products-s/products-e;
         overflow-y: scroll;
+        display: grid;
+        grid-template-rows: repeat(auto-fit, 80px);
+        grid-row-gap: 12px;
+        align-self: center;
     }
 
     .review-form__line {
