--- a/src/style/order/reviewForm.scss
+++ b/src/style/order/reviewForm.scss
@@ -1,4 +1,11 @@
 .review-form {
+    .review-form__legend {
+        grid-row: legend-s/legend-e;
+        grid-column: 1/-1;
+        font-size: 14px;
+        border-bottom: 1px solid #CCC;
+        padding-bottom: 11px;
+    }
 
     .review-form__products {
         grid-column: 1/-1;
