--- a/src/style/order/reviewProduct.scss
+++ b/src/style/order/reviewProduct.scss
@@ -1,6 +1,6 @@
 .review-product {
     display: grid;
-    grid-template-columns: [image-s] 80px [image-e title-s] 1fr [title-e quantity-s] 1fr [quantity-e price-s] .5fr [price-e];
+    grid-template-columns: [image-s] 80px [image-e title-s] 1fr [title-e quantity-s] 1fr [quantity-e price-s] .5fr [price-e] 40px;
     grid-template-rows: [s] 1fr [e];
     grid-column-gap: 30px;
     align-items: center;
@@ -28,6 +28,35 @@
     }
 
     .review-product__price {
+        grid-column: price-s/price-e;
+        justify-self: end;
+    }
+}
+
+
+.review-form__legend {
+    display: grid;
+    grid-template-columns: 80px [name-s] 1fr [name-e quantity-s] 1fr [quantity-e price-s] .5fr [price-e] 40px;
+    grid-template-rows: [s] 1fr [e];
+    grid-column-gap: 30px;
+    align-items: center;
+
+    & > * {
+        grid-row: s/e;
+    }
+
+    .review-form__legend__name {
+        grid-column: title-s/title-e;
+    }
+
+    .review-form__legend__quantity {
+        grid-column: quantity-s/quantity-e;
+        font-size: 18px;
+        font-weight: 600;
+        color: #666;
+    }
+
+    .review-form__legend__price {
         grid-column: price-s/price-e;
         justify-self: end;
     }
