--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,6 +18,8 @@
 @import './order/review.scss';
 @import './order/reviewForm.scss';
 @import './order/reviewProduct.scss';
+@import './information/shipping.scss';
+@import './information/payment.scss';
 
 html {
     font-size: 62.5%;
