--- a/src/style/information/shipping.scss
+++ b/src/style/information/shipping.scss
@@ -1,39 +1,65 @@
 .shipping {
-    .shipping__form {
+    grid-row: content-s/content-e;
+    grid-column: s/e;
 
+    .shipping__form {
+        display: grid;
+        grid-template-rows: [name-s] 64px [name-e] 35px [address-s] 64px [address-e city-s] 64px [city-e state-zip-s] 64px [state-zip-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+        grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e use-this-address-s] 1fr [use-this-address-e] 1fr;
+        grid-row-gap: 15px;
     }
 }
 
 .shipping-form {
     .shipping-form__name {
-
+        grid-row: name-s/name-e;
     }
 
     .shipping-form__address {
-
+        grid-row: address-s/address-e;
     }
 
     .shipping-form__city {
-
+        grid-row: city-s/city-e;
     }
 
-    .shipping-form__state {
-
+    .shipping-form__state,
+    .shipping-form__zipcode {
+        grid-row: state-zip-s/state-zip-e;
+        grid-column: back-s;
+        input {
+            width: 200px;
+        }
     }
 
     .shipping-form__zipcode {
-
+        transform: translateX(226px);
     }
 
     .shipping-form__line {
-
+        grid-row: line-s/line-e;
+        grid-column: 1/-1;
+        border-top: 1px solid #ccc;
+        margin-bottom: 24px;
     }
 
     .shipping-form__back {
-
+        grid-row: buttons-s/buttons-e;
+        grid-column: back-s/back-e;
     }
 
     .shipping-form__use-this-address {
-        
+        grid-row: buttons-s/buttons-e;
+        grid-column: use-this-address-s/use-this-address-e;
+    }
+}
+
+.shipping {
+    transition: all .3s ease-in-out;
+}
+
+@media only screen and (max-width: 600px) {
+    .shipping {
+        transform: scale(0.75);
     }
 }
