changed variable names to BEM convention adn refactor some code

--- a/src/style/auth/signIn.scss
+++ b/src/style/auth/signIn.scss
@@ -2,11 +2,11 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    // .sign-in-page-title {
+    // &__page-title {
 
     // }
 
-    .sign-in_form {
+    &__form {
         display: grid;
         grid-template-rows: [email-s] 64px [email-e password-s] 64px [password-e] minmax(20px, 289px) [line-s] 2px [line-e login-s] 38px [login-e];
         grid-template-columns: 1fr;
@@ -14,31 +14,25 @@
 }
 
 .sign-in-form {
-
     & > * {
         grid-column: 1/-1;
     }
-
-    .sign-in-form-email {
+    &__email {
         grid-row: email-s/email-e;
     }
-
-    .sign-in-form-password {
+    &__password {
         margin-top: 15px;
         grid-row: password-s/password-e;
     }
-
-    .sign-in-form-line {
+    &__line {
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
     }
-
-    .sign-in-form-login {
+    &__login {
         margin-top: 39px;
         grid-row: login-s/login-e;
     }
-
-    .sign-in-form-details {
+    &__details {
         grid-row: 1/-1;
         justify-self: end;
         align-self: start;
