--- a/src/style/auth/signUp.scss
+++ b/src/style/auth/signUp.scss
@@ -2,11 +2,11 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    .sign-up-page-title {
+    &__page-title {
 
     }
 
-    .sign-up_form {
+    &__form {
         display: grid;
         grid-template-rows: [name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
         grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e create-s] 1fr [create-e] 1fr;
@@ -15,44 +15,36 @@
 }
 
 .sign-up-form {
-
     & > * {
         grid-column: 1/-1;
     }
-
-    .sign-up-form-name {
+    &__name {
         grid-row: name-s/name-e;
     }
-
-    .sign-up-form-email {
+    &__email {
         grid-row: email-s/email-e;
     }
-
-    .sign-up-form-password {
+    &__password {
         grid-row: password-s/password-e;
     }
-
-    .sign-up-form-confirm {
+    &__confirm {
         grid-row: confirm-s/confirm-e;
     }
 
-    .sign-up-form-line {
+    &__line {
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
         margin-bottom: 24px;
     }
-
-    .sign-up-form-login {
+    &__login {
         grid-row: buttons-s/buttons-e;
         grid-column: create-s/create-e;
     }
-
-    .sign-up-form-back {
+    &__back {
         grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
     }
-
-    .sign-up-form-details {
+    &__details {
         grid-row: 1/-1;
         justify-self: end;
         align-self: start;
