--- a/src/style/formFields.scss
+++ b/src/style/formFields.scss
@@ -6,11 +6,10 @@
         padding-left: 20px;
     }
 
-    .form-input-label {
+    &__label {
         font-size: 14px;
     }
-
-    .form-input-input {
+    &__input {
         box-sizing: border-box;
         height: 39px;
         width: 426px;
@@ -22,12 +21,12 @@
 }
 
 .form-button {
-
-    .form-button-button {
+    &__button {
         height: 38px;
         width: 243px;
         border-radius: 20px;
         background-color: #00CB79;
+
         font-size: 16px;
         color: white;
 
@@ -36,21 +35,23 @@
         }
     }
 
-    .form-button-gray-button {
-        background-color: #999;
+    &__gray-button {
+        background: #999;
         width: 137px;
     }
+
 }
 
 .form-button-long-gray {
     display: grid;
     grid-gap: 6.5px;
-
-    .form-button-long-gray-button {
+    
+    &__button {
         height: 38px;
         width: 243px;
         border-radius: 20px;
         background-color: #999;
+
         font-size: 16px;
         color: white;
 
@@ -59,7 +60,7 @@
         }
     }
 
-    .form-button-long-gray-label {
+    &__label {
         padding-left: 20px;
         font-size: 14px;
     }
