--- a/src/style/headerNavbar.scss
+++ b/src/style/headerNavbar.scss
@@ -7,27 +7,30 @@
     grid-template-rows: 1fr;
     grid-template-columns: [img-s] 1fr [img-e links-s] 1fr [links-e];
 
-    .header-img {
+    &__img {
         transform: translateX(25px);
         grid-column: img-s/img-e;
         grid-row: 1/-1;
     }
-    
-    .header-links {
+
+    &__links {
         grid-column: links-s/links-e;
         grid-row: 1/-1;
-        
+
         display: grid;
         grid-template-rows: [s] 1fr [e];
         grid-column-gap: 47px;
-        margin-right: 47px;
+
         color: #333;
         font-size: 16px;
-
+    
         & > * {
             grid-row: s/e;
         }
+
+        margin-right: 47px;
     }
+
 }
 
 .green-text {
@@ -43,8 +46,10 @@
     display: grid;
     grid-template-rows: [s] 1fr [e];
     align-items: center;
+
     justify-content: center;
     grid-column-gap: 40px;
+
     color: #E6E6E6;
     font-size: 18px;
     font-weight: normal;
@@ -52,4 +57,5 @@
     & > * {
         grid-row: s/e;
     }
+
 }
