--- a/src/style/information/payment.scss
+++ b/src/style/information/payment.scss
@@ -1,75 +1,68 @@
 .payment {
-    grid-row: content-s/content-e;
+    grid-row: content-s/content-;
     grid-column: s/e;
 
-    .payment__form {
+    &__form {
         display: grid;
-        grid-template-rows: [name-s] 64px [name-e] [card-s] 64px [card-e expiration-ccv-s] 64px [expiration-ccv-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+        grid-template-rows: [name-s] 64px [name-e card-s] 64px [card-e expiration-ccv-s] 64px [expiration-ccv-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
         grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e pay-complete-s] 1fr [pay-complete-e] 1fr;
         grid-row-gap: 15px;
     }
 }
 
 .payment-form {
-    .payment-form__name {
+    &__name {
         grid-row: name-s/name-e;
     }
-
-    .payment-form__card {
+    &__card {
         grid-row: card-s/card-e;
     }
-
-    .payment-form__expiration,
-    .payment-form__ccv {
+    &__expiration,
+    &__ccv {
         grid-row: expiration-ccv-s/expiration-ccv-e;
         grid-column: back-s;
         input {
             width: 200px;
         }
     }
-
-    .payment-form__ccv {
+    &__ccv {
         transform: translateX(226px);
     }
 
-    .payment-form__line {
+    &__line {
         grid-row: line-s/line-e;
         grid-column: 1/-1;
         border-top: 1px solid #ccc;
         margin-bottom: 24px;
     }
-
-    .payment-form__back {
+    &__back {
         grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
     }
-
-    .payment-form__pay-complete {
+    &__pay-complete {
         grid-row: buttons-s/buttons-e;
         grid-column: pay-complete-s/pay-complete-e;
     }
-
-    .payment-form__order-summary {
+    &__order-summary {
         grid-row: name-s;
         grid-column: pay-complete-s/-1;
         justify-self: end;
     }
-
-    .payment-form__shipping-info {
+    &__shipping-info {
         grid-row: name-s;
         grid-column: pay-complete-s/-1;
         justify-self: end;
-        transform: translateY(14S5px);
+        transform: translateY(150px);
     }
 }
 
-.small-text {
-    font-size: 14px;
-}
+
+.small-text { font-size: 14px; }
 
 .shipping-info {
     width: 240px;
     height: 150px;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 30px 24px 24px;
@@ -78,16 +71,13 @@
     & > * {
         grid-column: 1/-1;
     }
-    
-    .shipping-info__title {
+    &__title {
 
     }
-
-    .shipping-info__name {
+    &__name {
 
     }
-
-    .shipping-info__address {
+    &__address {
 
     }
 }
