--- a/src/style/information/shipping.scss
+++ b/src/style/information/shipping.scss
@@ -2,7 +2,7 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    .shipping__form {
+    &__form {
         display: grid;
         grid-template-rows: [name-s] 64px [name-e] 35px [address-s] 64px [address-e city-s] 64px [city-e state-zip-s] 64px [state-zip-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
         grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e use-this-address-s] 1fr [use-this-address-e] 1fr;
@@ -11,61 +11,60 @@
 }
 
 .shipping-form {
-    .shipping-form__name {
+    &__name {
         grid-row: name-s/name-e;
     }
-
-    .shipping-form__address {
+    &__address {
         grid-row: address-s/address-e;
     }
-
-    .shipping-form__city {
+    &__city {
         grid-row: city-s/city-e;
     }
-
-    .shipping-form__state,
-    .shipping-form__zipcode {
+    &__state,
+    &__zipcode {
         grid-row: state-zip-s/state-zip-e;
         grid-column: back-s;
         input {
             width: 200px;
         }
     }
-
-    .shipping-form__zipcode {
+    &__zipcode {
         transform: translateX(226px);
     }
-
-    .shipping-form__line {
+    &__line {
         grid-row: line-s/line-e;
         grid-column: 1/-1;
         border-top: 1px solid #ccc;
         margin-bottom: 24px;
     }
-
-    .shipping-form__back {
+    &__back {
         grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
     }
-
-    .shipping-form__use-this-address {
+    &__use-this-address {
         grid-row: buttons-s/buttons-e;
         grid-column: use-this-address-s/use-this-address-e;
     }
-
-    .shipping-form__order-summary {
+    &__order-summary  {
         grid-row: name-s;
         grid-column: use-this-address-e/-1;
         justify-self: end;
     }
 }
 
-.shipping {
-    transition: all .3s ease-in-out;
-}
+// .shipping {
+//     transition: all .3s ease;
+// }
 
-@media only screen and (max-width: 600px) {
-    .shipping {
-        transform: scale(0.75);
-    }
-}
+// @media only screen and (max-width: 600px) {
+//     .shipping  {
+//         transform: scale(0.75);
+//     }
+// }
+
+
+// @media only screen and (max-width: 300px) {
+//     .shipping  {
+//         transform: scale(0.6);
+//     }
+// }
