--- a/src/style/account/purchaseHistory.scss
+++ b/src/style/account/purchaseHistory.scss
@@ -1,17 +1,14 @@
 .purchase-history {
-
-    .purchase-history-content {
-        display: grid;
+    &__content {
+        display: grid; 
         grid-template-columns: 1fr 1fr;
         margin: 37px 0;
     }
-    
-    .purchase-history-page-title {
-        border-bottom: 1px solid #ccc;
+    &__page-title {
+        border-bottom: 1px solid #CCC;
     }
-
-    .purchase-history-bottom-border {
-        border-bottom: 1px solid #f2f2f2;
+    &__border-bottom {
+        border-bottom: 1px solid #F2F2F2;
     }
 }
 
@@ -27,44 +24,37 @@
     display: grid;
     grid-template-columns: [s] 1fr [m] 1fr [e];
     grid-template-rows: [s] 1fr [sm] 1fr [m-s] 25px [m-e] 1fr [me] 1fr [e];
-    
-    .purchase-detail-order-date {
+    &__order-date {
         grid-column: s/m;
         grid-row: s/sm;
     }
-
-    .purchase-detail-order-number {
+    &__order-number {
         grid-column: s/m;
         grid-row: sm/m-s;
     }
-
-    .purchase-detail-shipping-address {
+    &__shipping-address {
         grid-column: s/m;
         grid-row: m-e/e;
     }
-
-    .purchase-detail-total {
+    &__total {
         grid-column: m/e;
         grid-row: s/sm;
     }
-
-    .purchase-detail-credit-card {
+    &__credit-card {
         grid-column: m/e;
         grid-row: sm/m-s;
     }
-
-    .purchase-detail-track-shipment {
+    &__track-shipment {
         grid-column: m/e;
         grid-row: m-e/me;
     }
-
-    .purchase-detail-print-receipt {
+    &__print-receipt {
         grid-column: m/e;
         grid-row: me/e;
     }
 
-    .purchase-detail-track-shipment,
-    .purchase-detail-print-receipt {
+    &__print-receipt,
+    &__track-shipment {
         width: 150px;
         justify-self: center;
         text-decoration-line: underline;
@@ -72,6 +62,7 @@
         font-size: 14px;
         font-weight: 600;
     }
+
 }
 
 .purchase-detail-label {
@@ -84,17 +75,16 @@
         grid-row: s/e;
     }
 
-    .purchase-detail-label-title {
+    &__title {
         grid-column: s/m;
         text-align: right;
         font-weight: 600;
         font-size: 16px;
     }
-
-    .purchase-detail-label-value {
+    &__value {
         grid-column: m/e;
         text-align: left;
-        color: #666;
+        color: #666666;
         font-size: 14px;
     }
 }
