--- a/src/style/information/infoHelp.scss
+++ b/src/style/information/infoHelp.scss
@@ -1,6 +1,6 @@
 .underlined-title {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 600;   
     border-bottom: 1px solid #CCC;
 }
 
@@ -9,25 +9,23 @@
     grid-template-rows: [s] 1fr [e];
     grid-template-columns: [s] 1fr [m] 1fr [e];
     align-items: center;
-    
-    .info-title__title {
+    &__title {
         grid-column: s/m;
         grid-row: s/e;
         font-size: 14px;
-    }
-
-    .info-title__value {
+    }   
+    &__value {
         grid-column: m/e;
         grid-row: s/e;
         color: #00CB79;
-        font-size: 18px;
         font-weight: 600;
+        font-size: 18px;
     }
 }
 
 .info-title-green {
     .info-title {
-        .info-title__title {
+        &__title {
             font-weight: 600;
             color: #00CB79;
         }
@@ -37,12 +35,13 @@
 .order-summary {
     width: 240px;
     height: 150px;
+
     display: grid;
     grid-template-rows: 30px 24px 24px 46px;
     grid-row-gap: 5px;
 
-    .info-title- {
-        .info-title__value {
+    .info-title {
+        &__value {
             justify-self: end;
         }
     }
