--- a/src/style/order/reviewForm.scss
+++ b/src/style/order/reviewForm.scss
@@ -1,40 +1,37 @@
 .review-form {
-    .review-form__legend {
+    &__legend {
         grid-row: legend-s/legend-e;
         grid-column: 1/-1;
         font-size: 14px;
         border-bottom: 1px solid #CCC;
         padding-bottom: 11px;
     }
-
-    .review-form__products {
+    &__products {
         grid-column: 1/-1;
         grid-row: products-s/products-e;
         overflow-y: scroll;
+
         display: grid;
         grid-template-rows: repeat(auto-fit, 80px);
         grid-row-gap: 12px;
+
         align-self: center;
     }
-
-    .review-form__line {
+    &__line {
         grid-column: 1/-1;
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
         margin-bottom: 24px;
     }
-
-    .review-form__back {
+    &__back {
         grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
     }
-
-    .review-form__proceed {
+    &__proceed {
         grid-row: buttons-s/buttons-e;
         grid-column: proceed-s/proceed-e;
     }
-
-    .review-form__details {
+    &__details {
         grid-row: 1/-1;
         grid-column: 1/-1;
         justify-self: end;
@@ -44,17 +41,14 @@
 }
 
 // .review-details {
-    
-//     .review-details__subtotal {
+//     &__shipping {
 
 //     }
+//     &__tax {
 
-//     .review-details__tax {
-        
 //     }
+//     &__total {
 
-//     .review-details__shipping {
-        
 //     }
 // }
 
@@ -63,15 +57,14 @@
     grid-template-columns: [title-s] 1fr [title-e] 65px [price-s] 1fr [price-e];
     grid-template-rows: 1fr;
     align-items: center;
-    
-    .review-detail__title {
-        grid-column: titles/title-e;
+
+    &__title {
+        grid-column: title-s/title-e;
         grid-row: 1/-1;
         text-align: right;
         font-size: 14px;
     }
-
-    .review-detail__price {
+    &__price {
         grid-column: price-s/price-e;
         grid-row: 1/-1;
         font-size: 18px;
@@ -81,10 +74,9 @@
 
 .review-detail-green {
     margin-top: 18px;
-    
-    .review-detail-green__price,
-    .review-detail-green__title {
-        color: #00CB79;
+    &__price,
+    &__title {
         font-weight: 600;
+        color: #00CB79;
     }
 }
