--- a/src/style/order/reviewProduct.scss
+++ b/src/style/order/reviewProduct.scss
@@ -3,31 +3,29 @@
     grid-template-columns: [image-s] 80px [image-e title-s] 1fr [title-e quantity-s] 1fr [quantity-e price-s] .5fr [price-e] 40px;
     grid-template-rows: [s] 1fr [e];
     grid-column-gap: 30px;
+
     align-items: center;
 
     & > * {
         grid-row: s/e;
     }
-    
-    .review-product__image {
+
+    &__image {
         grid-column: image-s/image-e;
     }
-
-    .review-product__title {
+    &__title {
         grid-column: title-s/title-e;
         font-size: 18px;
         font-family: 'Titillium Web';
         color: #333;
     }
-
-    .review-product__quantity {
+    &__quantity {
         grid-column: quantity-s/quantity-e;
         font-size: 18px;
         font-weight: 600;
-        color: #666;
+        color: #666666;
     }
-
-    .review-product__price {
+    &__price {
         grid-column: price-s/price-e;
         justify-self: end;
     }
@@ -39,26 +37,21 @@
     grid-template-columns: 80px [name-s] 1fr [name-e quantity-s] 1fr [quantity-e price-s] .5fr [price-e] 40px;
     grid-template-rows: [s] 1fr [e];
     grid-column-gap: 30px;
+
     align-items: center;
 
     & > * {
         grid-row: s/e;
     }
 
-    .review-form__legend__name {
-        grid-column: title-s/title-e;
+    &__name {
+        grid-column: name-s/name-e;
     }
-
-    .review-form__legend__quantity {
+    &__quantity {
         grid-column: quantity-s/quantity-e;
-        font-size: 18px;
-        font-weight: 600;
-        color: #666;
     }
-
-    .review-form__legend__price {
+    &__price {
         grid-column: price-s/price-e;
         justify-self: end;
     }
-
 }
