--- a/src/style/shop/cartProduct.scss
+++ b/src/style/shop/cartProduct.scss
@@ -1,44 +1,42 @@
 .cart-product {
     height: 130px;
+
     display: grid;
     grid-template-rows: [s] 1fr [m] 1fr [e];
-    grid-template-rows: [s image-s] 130px [image-e] 34px [title-s quantity-s] 1fr [quantity-e] 20px [remove-s] 1fr [remove-e title-e price-s] 70px [price-e];
+    grid-template-columns: [s image-s] 130px [image-e] 34px [title-s quantity-s] 1fr [quantity-e] 20px [remove-s] 1fr [remove-e title-e price-s] 70px [price-e e];
     align-items: end;
-    
-    .cart-product__image {
+
+    &__image {
         grid-row: s/e;
         grid-column: image-s/image-e;
     }
-
-    .cart-product__title {
-        align-self: start;
+    &__title {
         grid-row: s/m;
         grid-column: title-s/title-e;
+        align-self: start;
+
         font-size: 18px;
         font-family: 'Encode Sans Condensed';
         color: #e6e6e6;
     }
-
-    .cart-product__quantity {
+    &__quantity {
         grid-row: m/e;
         grid-column: quantity-s/quantity-e;
-
-        .quantity-count {
+        .quantity__count {
             color: white;
         }
     }
-
-    .cart-product__remove {
+    &__remove {
         grid-row: m/e;
         grid-column: remove-s/remove-e;
         justify-self: start;
+
         font-size: 14px;
         text-decoration-line: underline;
     }
-
-    .cart-product__price {
+    &__price {
         align-self: center;
         grid-row: m/e;
         grid-column: price-s/price-e;
-    }       
+    }
 }
