--- a/src/style/shop/shopSearchBar.scss
+++ b/src/style/shop/shopSearchBar.scss
@@ -1,14 +1,16 @@
 .shop-search-bar {
     input {
+        font-size: 20px;
+
         height: 40px;
         width: 100%;
         border: 1px solid #E6E6E6;
         border-radius: 20px;
-        font-size: 20px;
+
         color: #808080;
 
         &::placeholder {
-            color: #CCC;
+            color: #CCCCCC;
         }
 
         &:focus {
@@ -21,18 +23,19 @@
     display: grid;
     grid-template-rows: [s] 1fr [e];
     grid-template-columns: 20px [s] 20px [icon-e] 1fr [e] 50px;
-    
-    .search-bar-grid-icon {
+
+     &__icon {
         grid-row: s/e;
         grid-column: s/icon-e;
         font-size: 18px;
         z-index: 100;
         align-self: center;
-    }
-
-    .search-bar-grid-input {
+     }
+     
+     &__input {
         grid-row: s/e;
         grid-column: 1/e;
+
         padding-left: 50px;
-    }
+     }
 }
